--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 
 <div class="logo-title text-center">
-  <div class="main-image">
+  <div class="main-image mt-3">
     <img id="logo" src="assets/images/burger.png" alt="burger">
   </div>
 
@@ -39,7 +39,7 @@
 
       <div class="form-group">
         <label for="ca">Burger Name:</label>
-        <input type="text" id="ca" name="name">
+        <input type="text" id="burger-info" name="name">
       </div>
       
       <button type="submit">Add Burger</button>
